--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ nav{
              
                  I like reading comics, personal styling and also listening to music.<br><br>
              
-                 <p>mail id : ananyalokesh01@gmail.com</p><br><br>
+                 mail id : ananyalokesh01@gmail.com<br><br>
              <a href="https://www.linkedin.com/in/ananya-lokesh-612b372a1/">LinkedIn Profile</a><br><br>
                  <a href="https://github.com/Ananyalokesh01">Github</a>
              </p>
